removed container and changed them

--- a/index.html
+++ b/index.html
@@ -8,19 +8,26 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="main-container">
-        <nav class="nav-bar">
+    <nav class="nav-bar">
+        <div id="nav-container">
+            <div class="logo">
+                <span class="logo-item">Rock-Paper-Scissors</span>
+            </div>
             <ul class="nav-items">
                 <li><a href="">Reset</a></li>
             </ul>
-        </nav>
-        <section id="home-section">
+        </div>
+    </nav>
+    <section id="home-section">
+        <div id="container">
             
-        </section>
-        <footer>
-
-        </footer>
-    </div>
+        </div>
+    </section>
+    <footer>
+        <div id="container">
+            
+        </div>
+    </footer>
     <script src="app.js"></script>
 </body>
 </html>
