added span element to display scores

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             <div class="scoreboard">
                 <h1 class="scoreboard-header">Score</h1>
                 <div class="scores">
-                    <p class="user-score">You: </p>
-                    <p class="computer-score">Computer:</p>
+                    <p>You: <span class="user-score"></span></p>
+                    <p>Computer: <span class="computer-score"></span></p>
                 </div>
             </div>
             <div class="userselection">
