added data- attributes

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
                 </div>
             </div>
             <div class="userselection">
-                <button class="rock" id="user" data-user-handvalue="rock" onclick="user('rock')">
+                <button class="rock" id="user" data-user-hand="rock">
                     <p>Rock</p>
                 </button>
-                <button class="paper" id="user" value="paper" onclick="user('paper')">
+                <button class="paper" data-user-hand="paper">
                     <p>Paper</p>
                 </button>
-                <button class="scissors" id="user" value="scissors" onclick="user('scissors')">
+                <button class="scissors" data-user-hand="scissors">
                     <p>Scissors</p>
                 </button>
             </div>
