changed class names for game buttons

--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
                     <p>Computer: <span class="computer-score"></span></p>
                 </div>
             </div>
-            <div class="userselection">
-                <button class="rock" id="user" data-user-hand="rock">
+            <div class="game-button-container">
+                <div class="userChoice" data-userhand="rock">
                     <p>Rock</p>
-                </button>
-                <button class="paper" data-user-hand="paper">
+                </div>
+                <div class="userChoice" data-userhand="paper">
                     <p>Paper</p>
-                </button>
-                <button class="scissors" data-user-hand="scissors">
+                </div>
+                <div class="userChoice" data-userhand="scissors">
                     <p>Scissors</p>
-                </button>
+                </div>
             </div>
         </div>
     </section>
