added divs for the game

--- a/index.html
+++ b/index.html
@@ -11,6 +11,23 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="game-container">
+        <header>
+
+        </header>
+        <div class="game-scoreboard">
+            <div class="user-score"></div>
+            <div class="computer-score"></div>
+        </div>
+        <div class="game-display">
+            <!-- this is where the choices that the user selected and that the computer choose will be displayed -->
+        </div>
+        <div class="game-selection">
+            <div class="game-button" data-choice="rock">rock</div>
+            <div class="game-button" data-choice="paper">paper</div>
+            <div class="game-button" data-choice="scissors">scissors</div>
+        </div>
+    </div>
     <script src="app.js"></script>
 </body>
 </html>
