added game title

--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
 </head>
 <body>
     <div class="game-container">
-        <header>
-
-        </header>
+        <header><h1 class="game-title">Rock Paper Scissors</h1></header>
         <div class="game-scoreboard">
             <div class="user-score"></div>
             <div class="computer-score"></div>
