added span to input scores

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <div class="game-container">
         <header><h1 class="game-title">Rock Paper Scissors</h1></header>
         <div class="game-scoreboard">
-            <div class="user-score"></div>
-            <div class="computer-score"></div>
+            <div class="user-score">Your score: <span class="user">0</span></div>
+            <div class="computer-score">Computer Score: <span class="computer">0</span></div>
         </div>
         <div class="game-display">
             <!-- this is where the choices that the user selected and that the computer choose will be displayed -->
