--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
             <div class="user-score">Your score: <span class="user">0</span></div>
             <div class="computer-score">Computer Score: <span class="computer">0</span></div>
         </div>
-        <div class="alert-container"></div>
+        <div class="alert-container">
+            <button class="play-again hide" data-play-again>Play Again!</button>
+        </div>
         <div class="game-display">
             <!-- this is where the choices that the user selected and that the computer choose will be displayed -->
         </div>
