linked font for site

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/0b6206074f.js" crossorigin="anonymous"></script>
     <title>Rock-Paper-Scissors</title>
     <link rel="stylesheet" href="style.css">
@@ -15,8 +15,9 @@
     <div class="game-container">
         <header><h1 class="game-title">Rock Paper Scissors</h1></header>
         <div class="game-scoreboard">
-            <div class="user-score">Your score: <span class="user">0</span></div>
-            <div class="computer-score">Computer Score: <span class="computer">0</span></div>
+            <p class="round-winner"></p>
+            <div class="user-score">Your score: <span class="user">0</span> Computer Score: <span class="computer">0</span></div>
+            <div class="computer-score"></div>
         </div>
         <div class="alert-container">
             <button class="play-again hide">Play Again!</button>
