changed class name and put scores into one div

--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
         <header><h1 class="game-title">Rock Paper Scissors</h1></header>
         <div class="game-scoreboard">
             <p class="round-winner"></p>
-            <div class="user-score">Your score: <span class="user">0</span> Computer Score: <span class="computer">0</span></div>
-            <div class="computer-score"></div>
+            <div class="scores">Your score: <span class="user">0</span> Computer Score: <span class="computer">0</span></div>
         </div>
         <div class="alert-container">
             <button class="play-again hide">Play Again!</button>
