added icons to buttons

--- a/index.html
+++ b/index.html
@@ -35,9 +35,18 @@
             </div>
         </div>
         <div class="game-selection">
-            <button class="game-button" data-choice="rock">rock</button>
-            <button class="game-button" data-choice="paper">paper</button>
-            <button class="game-button" data-choice="scissors">scissors</button>
+            <button class="game-button" data-choice="rock">
+                <i class="fa-solid fa-hand-back-fist"></i>
+                <p>rock</p>
+            </button>
+            <button class="game-button" data-choice="paper">
+                <i class="fa-solid fa-hand"></i>
+                <p>paper</p>
+            </button>
+            <button class="game-button" data-choice="scissors">
+                <i class="fa-solid fa-hand-scissors"></i> 
+                <p>Scissors</p>
+            </button>
         </div>
     </div>
     <script src="app.js"></script>
