moved js link to head

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/0b6206074f.js" crossorigin="anonymous"></script>
+    <script src="app.js" defer></script>
     <title>Rock-Paper-Scissors</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -35,20 +36,16 @@
             </div>
         </div>
         <div class="game-selection">
-            <button class="game-button" data-choice="rock">
-                <i class="fa-solid fa-hand-back-fist"></i>
-                <p>rock</p>
-            </button>
-            <button class="game-button" data-choice="paper">
-                <i class="fa-solid fa-hand"></i>
-                <p>paper</p>
+            <div class="game-button" data-choice="rock">
+                rock
+            </div>
+            <button class="game-button" data-choice="paper">    
+                paper
             </button>
             <button class="game-button" data-choice="scissors">
-                <i class="fa-solid fa-hand-scissors"></i> 
-                <p>Scissors</p>
+               scissors
             </button>
         </div>
     </div>
-    <script src="app.js"></script>
 </body>
 </html>
